스케줄 업데이트 시 현재 이미지 위치에 따른 명령어 변경
